--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,16 @@
     <string name="describe">Phở là một món ăn có thể ăn vào bất cứ khoảng thời gian nào mà bạn muốn: sáng, trưa, chiều, tối đều được cả. Điểm đặc biệt, món phở không ăn kèm, uống kèm bất cứ thứ gì khác. Một bát phở bao gồm: nước dùng, bánh phở, gia vị ăn kèm như tiêu, hành lá, lát chanh, ớt… Nước dùng của phở có thể được chế biến từ xương bò: xương cục, xương ống và xương vè </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="search_1">xsjxjecei</string>
+    <string name="search_2">xsjxjecei</string>
+    <string name="search_3">xsjxjecei</string>
+    <string name="search_4">xsjxjecei</string>
+    <string name="search_5">xsjxjecei</string>
+
+    <string name="search_6">xsjxjecei</string>
+    <string name="search_7">xsjxjecei</string>
+
+
 </resources>
